[package]
name = "retris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
ron = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }

